# multi-ai-agent

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/backend/: api.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: ui.py
